test/simple/ill-typed/mu_s_t.caprice
(* TEST
  include refutable;
*)

(* ERROR: this type is not contractive *)
let _ : (mu t. let s = mu s. t in s) -> list (list int) = fun x -> x
